--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
     />
   </head>
   <body>
-    <div class="image-container">
-      <img src="Images/MARELD-Logo.png" alt="" />
+    <div class="openingSection">
+      <div class="image-container">
+        <img src="Images/MARELD-Logo.png" alt="" />
+      </div>
+      <div class="video-container">
+        <iframe
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/A7AhNiyj_EQ?&autoplay=1&mute=1"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <section id="scrollSection" class="scroll">
+        <a href="#info"><span></span><span></span><span></span>Scroll</a>
+      </section>
     </div>
-    <div class="video-container">
-      <iframe
-        width="100%"
-        height="100%"
-        src="https://www.youtube.com/embed/A7AhNiyj_EQ"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-    </div>
+    <section class="fullscreen" id="info"></section>
   </body>
 </html>
