--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="openingSection">
@@ -28,9 +32,42 @@
         ></iframe>
       </div>
       <section id="scrollSection" class="scroll">
-        <a href="#info"><span></span><span></span><span></span>Scroll</a>
+        <a href="#info"><span></span><span></span><span></span>Read more</a>
       </section>
     </div>
-    <section class="fullscreen" id="info"></section>
+    <section class="fullscreen">
+      <div class="image-icon">
+        <img src="Images/MARELD-Symbol.png" alt="" srcset="" />
+      </div>
+      <div id="info">
+        <h1>Mareld</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="links">
+        <div id="link1">
+          <a href="https://www.instagram.com/" target="blank">
+            <img src="Images/instagram-logo-png-2451.png" alt="Instagram" />
+          </a>
+        </div>
+        <div id="link2">
+          <a href="https://www.spotify.com/se/" target="blank">
+            <img src="Images/spotify-logo-png-7069.png" alt="Spotify" />
+          </a>
+        </div>
+        <div id="link3">
+          <a href="https://www.facebook.com/" target="blank">
+            <img src="Images/logo-facebookpng-32213.png" alt="Facebook" />
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
