--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           src="https://www.youtube.com/embed/A7AhNiyj_EQ?&autoplay=1&mute=1"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          playsinline="1"
           allowfullscreen
         ></iframe>
       </div>
