--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
         <img src="Images/MARELD-Symbol.png" alt="" srcset="" />
       </div>
       <div id="info">
-        <h1>Mareld</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <div>
+          <h1>Mareld</h1>
+          <p>
+            Originating from the coastal town of Varberg on the Swedish West Coast, 
+            the progressive metal outfit Mareld started taking form in early 2019 and has been in the works ever since.
+            With each member having a different musical background, Mareld comes together with one common goal; to create fun music.
+          </p>
+          <p>
+            Technical guitar riffs, heavy breakdowns, groovy bass parts, classic rock vocals and brutal death metal screams all blend together in perfect harmony.
+            Mareld tries to embrace the DIY-mentality in as many ways as possible. Everything you hear is self produced. 
+          </p>
+        </div>
       </div>
       <div class="links">
         <div id="link1">
