--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mareld | Official Site</title>
+    <title>MARELD | Official Site</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="openingSection">
@@ -31,24 +32,30 @@
         ></iframe>
       </div>
       <section id="scrollSection" class="scroll">
-        <a href="#info"><span></span><span></span><span></span>Read more</a>
+        <a href="#bio"><span></span><span></span><span></span>Read more</a>
       </section>
     </div>
-    <section class="fullscreen">
+    <section class="fullscreen" id="bio">
+      <div class="nav responsive" id="myNav">
+        <a href="#merch" class="active">Merch</a>
+        <a href="#tourdates">Tour Dates</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
+      </div>
       <div class="image-icon">
         <img src="Images/MARELD-Symbol.png" alt="" srcset="" />
       </div>
       <div id="info">
         <div>
-          <h1>Mareld</h1>
+          <h1>MARELD</h1>
           <p>
             Originating from the coastal town of Varberg on the Swedish West Coast, 
-            the progressive metal outfit Mareld started taking form in early 2019 and has been in the works ever since.
+            the progressive metal outfit MARELD started taking form in early 2019 and has been in the works ever since.
             With each member having a different musical background, Mareld comes together with one common goal; to create fun music.
           </p>
           <p>
             Technical guitar riffs, heavy breakdowns, groovy bass parts, classic rock vocals and brutal death metal screams all blend together in perfect harmony.
-            Mareld tries to embrace the DIY-mentality in as many ways as possible. Everything you hear is self produced. 
+            MARELD tries to embrace the DIY-mentality in as many ways as possible. Everything you hear is self produced. 
           </p>
         </div>
       </div>
@@ -70,5 +77,24 @@
         </div>
       </div>
     </section>
+    <section class="fullscreen" id="merch">
+      <h1>MERCH</h1>
+      <h2>Coming soon.</h2>
+    </section>
+    <section class="fullscreen" id="tourdates">
+      <h1>TOUR DATES</h1>
+      <h2>Coming soon.</h2>
+    </section>
+    <section class="fullscreen" id="gallery">
+      <h1>GALLERY</h1>
+      <h2>Coming soon.</h2>
+    </section>
+    <section class="fullscreen" id="contact">
+      <h1>CONTACT</h1>
+      <h2>Coming soon.</h2>
+    </section>
   </body>
+  <footer>
+    <script src="script.js"></script>
+  </footer>
 </html>
