no more tour dates

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     </div>
     <section class="fullscreen" id="bio">
       <div class="nav responsive" id="myNav">
-        <a href="#merch" class="active">Merch</a>
-        <a href="#tourdates">Tour Dates</a>
+        <a href="#merch">Merch</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
       </div>
@@ -79,10 +78,6 @@
     </section>
     <section class="fullscreen" id="merch">
       <h1>MERCH</h1>
-      <h2>Coming soon.</h2>
-    </section>
-    <section class="fullscreen" id="tourdates">
-      <h1>TOUR DATES</h1>
       <h2>Coming soon.</h2>
     </section>
     <section class="fullscreen" id="gallery">
