--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
           <div id="content">
           </div>
         </div>
+        <div class="links">
+          <div id="link1">
+            <a href="https://www.instagram.com/" target="blank">
+              <img src="Images/instagram-logo-png-2451.png" alt="Instagram" />
+            </a>
+          </div>
+          <div id="link2">
+            <a href="https://www.spotify.com/se/" target="blank">
+              <img src="Images/spotify-logo-png-7069.png" alt="Spotify" />
+            </a>
+          </div>
+          <div id="link3">
+            <a href="https://www.facebook.com/" target="blank">
+              <img src="Images/logo-facebookpng-32213.png" alt="Facebook" />
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
