--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="links">
           <div id="link1">
-            <a href="https://www.instagram.com/" target="blank">
+            <a href="https://www.instagram.com/musicbymareld/" target="blank">
               <img src="Images/instagram-logo-png-2451.png" alt="Instagram" />
             </a>
           </div>
@@ -43,8 +43,8 @@
             </a>
           </div>
           <div id="link3">
-            <a href="https://www.facebook.com/" target="blank">
-              <img src="Images/logo-facebookpng-32213.png" alt="Facebook" />
+            <a href="https://www.facebook.com/musicbymareld" target="blank">
+              <img src="Images/ca3bf05cfab74677e5b73b130bd30991.png" alt="Facebook" />
             </a>
           </div>
         </div>
