--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -26,7 +26,7 @@
             <li><span id="seconds"></span>Seconds</li>
           </ul>
         </div>
-        <h1 id="headline">January 8th</h1>
+        <h1 id="headline">January 15th</h1>
         <div class="message">
           <div id="content">
           </div>
