update spotify URL

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div id="link2">
-            <a href="https://www.spotify.com/se/" target="blank">
+            <a href="https://distrokid.com/hyperfollow/mareld/the-unavoidable-end" target="blank">
               <img src="Images/spotify-logo-png-7069.png" alt="Spotify" />
             </a>
           </div>
