update landing video and remove merch, contact and gallery segments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,7 +27,7 @@
         <iframe
           width="100%"
           height="100%"
-          src="https://www.youtube.com/embed/eH6tqXQNWUA?&autoplay=1&mute=1&loop=1&playsinline=1"
+          src="https://www.youtube.com/embed/_3IF6Nxp64s?&autoplay=1&mute=1&loop=1&playsinline=1"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         ></iframe>
@@ -38,9 +38,6 @@
     </div>
     <section class="fullscreen" id="bio">
       <div class="nav responsive" id="myNav">
-        <a href="#merch">Merch</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
       </div>
       <div class="image-icon">
         <img src="Images/MARELD-Symbol.png" alt="" srcset="" />
@@ -61,33 +58,21 @@
       </div>
       <div class="links">
         <div id="link1">
-          <a href="https://www.instagram.com/" target="blank">
+          <a href="https://www.instagram.com/musicbymareld/" target="blank">
             <img src="Images/instagram-logo-png-2451.png" alt="Instagram" />
           </a>
         </div>
         <div id="link2">
-          <a href="https://www.spotify.com/se/" target="blank">
+          <a href="https://open.spotify.com/artist/6dbO1ujY8Zf8sxyXXxEeBo" target="blank">
             <img src="Images/spotify-logo-png-7069.png" alt="Spotify" />
           </a>
         </div>
         <div id="link3">
-          <a href="https://www.facebook.com/" target="blank">
+          <a href="https://www.facebook.com/musicbymareld" target="blank">
             <img src="Images/logo-facebookpng-32213.png" alt="Facebook" />
           </a>
         </div>
       </div>
-    </section>
-    <section class="fullscreen" id="merch">
-      <h1>MERCH</h1>
-      <h2>Coming soon.</h2>
-    </section>
-    <section class="fullscreen" id="gallery">
-      <h1>GALLERY</h1>
-      <h2>Coming soon.</h2>
-    </section>
-    <section class="fullscreen" id="contact">
-      <h1>CONTACT</h1>
-      <h2>Coming soon.</h2>
     </section>
   </body>
   <footer>
